--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 html,
 body {
-    background: rgb(1, 1, 48);
+    background: linear-gradient(107.56deg, #1A0065 23.96%, rgba(0, 0, 0, 0.83) 47.92%, #6CA4B0 81.25%);
     padding: 0;
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
